[project]
name = "code-doc-agent"
version = "0.1.0"
description = "Standalone Code Documentation Agent (Java + React)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "litellm>=1.50",
    "tree-sitter>=0.22",
    "tree-sitter-java>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "networkx>=3.3",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
]

[tool.setuptools.packages.find]
where = ["."]
