[project]
name = "sre-fixer-agent"
version = "0.1.0"
description = "Standalone SRE Fixer agent (patch + test + Azure Repos PR)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "litellm>=1.50",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "GitPython>=3.1",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
